force-app/main/default/objects/My_Payments__c/My_Payments__c.object-meta.xml
<CustomObject>
    <label>My Payment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>My Payments</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>