force-app/main/default/objects/My_Payments__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>My Payments</relationshipLabel>
    <relationshipName>My_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>