force-app/main/default/objects/My_Payments__c/fields/My_Order__c.field-meta.xml
<CustomField>
    <fullName>My_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>My Order</label>
    <referenceTo>portal_my_order__c</referenceTo>
    <relationshipLabel>My Payments</relationshipLabel>
    <relationshipName>My_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>