force-app/main/default/objects/My_Payments__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment</referenceTo>
    <relationshipLabel>My Payments</relationshipLabel>
    <relationshipName>My_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>